Changes made in portspolio

--- a/styles.css
+++ b/styles.css
@@ -463,4 +463,22 @@ footer p {
     .menu-toggle {
         font-size: 1.2em;
     }
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 60px; /* Adjust based on navbar height */
+        left: 0;
+        background-color: #333;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    .nav-links li {
+        margin: 0;
+        text-align: center;
+    }
 }
