--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,9 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
+.menu-toggle{
+    display: none;
+}
 .container {
     width: 80%;
     margin: auto;
@@ -356,6 +358,9 @@ footer p {
     font-size: 0.9rem;
 }
 @media (max-width: 768px) {
+    .menu-toggle{
+        display: block;
+    }
     nav .container {
         flex-direction: column;
         align-items: flex-start;
@@ -429,6 +434,9 @@ footer p {
 }
 
 @media (max-width: 480px) {
+    .menu-toggle{
+        display: block;
+    }
     .hero-section h2 {
         font-size: 1.6em;
     }
